# Dn-FamiTracker

./: .gitattributes  .gitignore  .gitmodules  0CC-FamiTracker.rc  0CC-FamiTracker.reg  0CC-FamiTracker.sln  0CC-FamiTracker.vcxproj  0CC-FamiTracker.vcxproj.filters  0CC-readme.txt  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dn-FT_VS_Dependencies.vsconfig  Dn-FamiTracker.rc  Dn-FamiTracker.reg  Dn-FamiTracker.sln  Dn-FamiTracker.vcxproj  Dn-FamiTracker.vcxproj.filters  Dn_main_appveyor.yml  Dn_master_appveyor.yml  FamiTracker.rc  FamiTracker.reg  FamiTracker.sln  FamiTracker.vcproj  FamiTracker.vcxproj  FamiTracker.vcxproj.filters  LICENSE-MIT-0.txt  LICENSE.md  LICENSE.txt  README.md  Readme.txt  appveyor.yml  changelog.txt  cmake_user_begin.cmake.example  cmake_user_end.cmake.example  generate-helpmap.bat  j0cc_master_appveyor.yml  name.h  post-commit.sample  release.bat  (+4 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/build_matrix/: action.yml
.github/actions/cache_cc65/: action.yml
.github/workflows/: build-artifact.yml  build-release-artifact.yml
Source/: AboutDlg.cpp  AboutDlg.h  Accelerator.cpp  Accelerator.h  Action.cpp  Action.h  ActionHandler.cpp  ActionHandler.h  Arpeggiator.cpp  Arpeggiator.h  AudioDriver.cpp  AudioDriver.h  Bookmark.cpp  Bookmark.h  Bookmark2.cpp  Bookmark2.h  BookmarkCollection.cpp  BookmarkCollection.h  BookmarkDlg.cpp  BookmarkDlg.h  BookmarkManager.cpp  BookmarkManager.h  ChannelFactory.cpp  ChannelFactory.h  ChannelHandler.cpp  ChannelHandler.h  ChannelHandlerInterface.h  ChannelMap.cpp  ChannelMap.h  ChannelState.cpp  ChannelState.h  Channels2A03.cpp  Channels2A03.h  ChannelsDlg.cpp  ChannelsDlg.h  ChannelsFDS.cpp  ChannelsFDS.h  ChannelsMMC5.cpp  ChannelsMMC5.h  ChannelsN163.cpp  (+324 more)
Source/APU/: 2413tone.h  2A03.cpp  2A03.h  2A03Chan.h  APU.CPP  APU.cpp  APU.h  Channel.h  ChannelLevelState.h  DPCM.CPP  DPCM.h  External.h  FDS.CPP  FDS.H  FDS.cpp  FDS.h  FDSSound.cpp  FDSSound.h  MMC5.CPP  MMC5.H  MMC5.cpp  MMC5.h  Mixer.cpp  Mixer.h  N163.CPP  N163.H  N163.cpp  N163.h  Noise.cpp  Noise.h  S5B.cpp  S5B.h  SoundChip.cpp  SoundChip.h  SoundChip2.cpp  SoundChip2.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  (+12 more)
Source/APU/digital-sound-antiques/: 2413tone.h  emu2413.c  emu2413.h
Source/APU/ext/: vrc7tone.h
Source/APU/mesen/: BaseFdsChannel.h  FdsAudio.h  LICENSE  ModChannel.h  Namco163Audio.h
Source/APU/nezplug/: FDS.CPP  FDS.H  FDSSound.cpp
Source/APU/nsfplay/: readme.txt
Source/APU/nsfplay/legacy/: emu2212.c  emu2212.h  emu2413.c  emu2413.h  vrc7tone_ft35.h  vrc7tone_kt1.h  vrc7tone_kt2.h  vrc7tone_mo.h
Source/APU/nsfplay/xgm/: debugout.h  xtypes.h
Source/APU/nsfplay/xgm/devices/: device.h  devinfo.h
Source/APU/nsfplay/xgm/devices/CPU/: nes_cpu.cpp  nes_cpu.h
Source/APU/nsfplay/xgm/devices/Sound/: nes_apu.cpp  nes_apu.h  nes_dmc.cpp  nes_dmc.h  nes_fds.cpp  nes_fds.h  nes_fme7.cpp  nes_fme7.h  nes_mmc5.cpp  nes_mmc5.h  nes_n106.cpp  nes_n106.h  nes_vrc6.cpp  nes_vrc6.h  nes_vrc7.cpp  nes_vrc7.h  nsfplay_math.h
Source/APU/nsfplay/xgm/devices/Sound/legacy/: 2413tone.h  281btone.h  emu2149.c  emu2149.h  emu2413.c  emu2413.h  vrc7tone_ft36.h  vrc7tone_rw.h
Source/APU/old/: emu2413.c  vrc7tone.h
Source/Blip_Buffer/: Blip_Buffer.cpp  Blip_Buffer.h
Source/ExportTest/: ExportTest.cpp  ExportTest.h
Source/FFT/: Complex.h  Fft.cpp  Fft.h  FftBuffer.h  FftComplex.hpp
Source/Utility/: Factory.h
Source/WinSDK/: VersionHelpers.h
Source/drivers/: build.cmd  drv_2a03.h  drv_all.h  drv_fds.h  drv_mmc5.h  drv_n163.h  drv_s5b.h  drv_vrc6.h  drv_vrc7.h
Source/drivers/asm/: .gitignore  .gitrepo  LICENSE  LICENSE.md  apu.s  driver.s  effects.s  fds.s  init.s  instrument.s  mmc5.s  n163.s  nes.s  nsf.cfg  nsf_wrap.s  periods.s  player.s  s5b.s  sfx.s  vibrato.s  vrc6.s  vrc7.s
Source/libsamplerate/: libsamplerate.vcxproj  libsamplerate.vcxproj.filters
Source/libsamplerate/src/: config.h  libsamplerate.vcxproj  libsamplerate.vcxproj.filters
Source/resampler/: resample.cpp  resample.hpp  resample.inl  sinc.cpp  sinc.hpp
Source/str_conv/: str_conv.hpp  utf8_conv.hpp
Source/utils/: ftmath.cpp  ftmath.h  handle_ptr.h  input.h  variadic_minmax.h
Source/yamc/: fair_mutex.hpp
UnitTests/: UnitTests.vcxproj  UnitTests.vcxproj.filters
UnitTests/src/: doctest.h  testMain.cpp
UnitTests/src/Test/: ChannelHandler.cpp
cmake/: compile-chm.bat  exe.cmake  mfc.cmake  mfc.cmake.in
demo/: DnC1 - AtomicMelodies - Trapped Within a Memory.dnm  DnC1 - Firespike33 - Hellpath.dnm  DnC1 - Kot (Yumetaro) - The Wavetable That Doesn't Wanna Be.dnm  DnC1 - RushJet1, Mahbod Karamoozian - GOAted Ambition.dnm  DnC1 - hEYDON - Hell or High Water.dnm
docs/: 0CC vs FT effects type order.md  0CC-Dn-FT_NSF_driver_update_sequence.md  Adding_new_chips.md  CHANGELOG.md  CONTRIBUTING.md  Dn-FT DNM format v4_50.md  Dn-FT JSON block format v1_1.md  Dn-FT module format.md  Dn-FT_instrument_format_v2.4.md  Dn-FT_module_format_v4.50.md  Dn-FT_tracker_update_sequence.md  How to add a chip.md  changelog_format.md  contributionguide.md  enable_asan.md  index.md  pull_request_template.md  version update.md  version_update.md
hlp/: 2a03.htm  Dn-FamiTracker.chm  Dn-FamiTracker.hhc  Dn-FamiTracker.hhk  Dn-FamiTracker.hhp  HTMLDefines.h  changelog.htm  command_line.htm  comments.htm  config_appearance.htm  config_emulation.htm  config_general.htm  config_gui.htm  config_midi.htm  config_mixer.htm  config_shortcuts.htm  config_sound.htm  config_version.htm  configuration.htm  control_panel.htm  dpcm_editor.htm  dpcm_import.htm  effect_list.htm  export_wave.htm  faq.htm  fds.htm  hlp.vcxproj  hlp.vcxproj.filters  instruments.htm  interface.htm  main_index.htm  menu_edit.htm  menu_file.htm  menu_help.htm  menu_instrument.htm  menu_module.htm  menu_pattern.htm  menu_song.htm  menu_tracker.htm  menu_view.htm  (+17 more)
res/: 0CC-FamiTracker.manifest  0CC-FamiTracker.rc  0CC-FamiTracker.rc2  Dn-FamiTracker.manifest  Dn-FamiTracker.rc  FamiTracker.manifest  FamiTracker.rc2  export_report.htm  resource.h
